# .dotfiles

./: .editorconfig  .gitignore  .pytest.ini  .releaserc  .subtrees  .subtrees.dist.yml  .subtrees.yml  CITATION.cff  LICENSE  Makefile  README.md  init.sh  install.bash  install.py  install.sh  make-venv  pyproject.toml  setup.sh
.github/: .releaserc  .releaserc.dist
.github/workflows/: tests.yml
cfg/: .deps.default  .dialog-edit  .dialog-vars  .dialogrc  .env.default  .env.dist  .node  .node.dist  .ubuntu  .wslconfig
cfg/cron/: apt-update  freshclam  logwatch
cfg/data/: .disablefs  dependencies.list  harden.list  purge.list  repos.list  repositories.list
cfg/git/: .gitconfig
cfg/gnupg/: gpg-agent.conf  gpg.conf
cfg/gpg/.gnupg/: gpg-agent.conf  gpg.conf
cfg/logrotate/: logrotate-traefik.conf
docs/: CORE.md  HYPER-V.md  INSTALL.md  README.md
dot/dots/: .bashrc
dot/dots/.bashrc.d/: 10-env.bash  20-functions.bash  30-plugins.bash  40-aliases.bash  50-completions.bash
dot/lib/aliases/: filesys.aliases.bash  general.aliases.bash  python.aliases.bash
dot/lib/functions/: docker.functions.bash
dots/: bash_aliases.bash  bash_common.bash  bash_completions.bash  bash_env.bash  bash_functions.bash  bash_plugins.bash  bash_profile.bash  bash_prompts.bash  bashrc.bash
dots/prompts/: default.bash  kali.bash
dotware/: __init__.py  config.py  errors.py  output.py  pyproject.toml
dotware/dotfiles/: __init__.py  cli.py  registry.py
dotware/dotlib/: errors.py  files.py  logs.py  output.py
etc/: fstab  resolv.conf  wsl.conf
etc/fail2ban/: jail.local
etc/sudoers.d/: ragdata
lib/aliases/: dot.aliases.bash  filesys.aliases.bash  general.aliases.bash  git.aliases.bash  gpg.aliases.bash  python.aliases.bash
lib/apps/: .template  apt  ca-certificates  curl  dialog  git  gnupg  yq
lib/apps/dialog/: .template  buildlist  calendar  checklist  dselect  editbox  form  form_nohelp  fselect  inputbox
lib/apps/harden/: harden.bash
lib/apps/label-manager/: label-manager.bash
lib/apps/wsl2-boot/: wsl2-boot.bash
lib/completions/: alias.completions.bash
lib/dialog/: .template  buildlist  calendar  checklist  dselect  editbox  form  form_nohelp  fselect  inputbox  inputmenu  menu  mixedform  mixedgauge-demo  msgbox  passwordbox  passwordform  pause  prgbox-demo  programbox-demo  progressbox-demo  radiolist  rangebox  tailbox  textbox  timebox  treeview  yesno
lib/dialog/scripts/: .dialog-tempfile  shortlist
lib/functions/: alias.functions.bash  apps.bash  common.bash  common.functions.bash  completion.functions.bash  dialog.functions.bash  dotfiles.functions.bash  files.bash  files.functions.bash  git.functions.bash  history.functions.bash  instance.functions.bash  log.functions.bash  menu.functions.bash  pkg.functions.bash  plugin.functions.bash  regex.functions.bash  script.functions.bash  ssh.functions.bash  string.functions.bash  system.functions.bash  terminal.bash  terminal.functions.bash  wsl.functions.bash
lib/functions/available/: apps.functions.bash  common.functions.bash  files.functions.bash
lib/help/: .template  dotfiles.help.bash
lib/pkgs/: .template  acct  aide-common  ansible  apparmor  apt  auditd  bash-completion  bind9-dnsutils  ca-certificates  chkrootkit  chrootkit  cockpit  cockpit-benchmark  composer  coreutils  cracklib-runtime  cron-updates  curl  debsums  default-jre  dialog  dive  dos2unix  fail2ban  firefox  fstab  gh-cli  git  gnupg  haveged  intellij-community  iputils-ping  libpam-pwquality  libpam-tmpdir  logrotate  needrestart  net-tools  openssh-server  postfix  (+22 more)
lib/pkgs/bundles/: basic.list  wsl2-ubuntu  wsl2-ubuntu.list
lib/plugins/label-manager/: label-manager.bash  requirements.txt  setup.py
lib/profiles/: default
lib/scripts/: compilers  cron  ctraltdel  disablefs  disablemod  disablenet  fstab  hosts  issue  kernel  limits  logindconf  logindefs  password  rhosts  sshd  sysctl  systemd-resolved  systemdconf  timesyncd  user  wsl
lib/templates/: aliases.tmpl
shell/bash/: bash_aliases.bash  bash_common.bash  bash_completions.bash  bash_env.bash  bash_profile.bash  bash_prompts.bash  bash_terminal.bash  bashrc.bash  install.bash
src/dots/: .gitconfig
src/dots/.bashrc.d/: 10-env.bash  15-common.bash  20-functions.bash  30-plugins.bash  35-prompts.bash  40-aliases.bash  50-completions.bash
src/dotware/: README.md  __init__.py  config.py  files.py  logger.py  meta.py  output.py  registry.py  server.py  threads.py  utils.py
src/dotware/dotfiles/: __init__.py  __main__.py  cli.py  custom.py  install.py  lib.py  package.py  registry.py  script.py  uninstall.py
src/dotware/dotlib/: __init__.py  files.py  logs.py  output.py  (+2 more)
src/instances/: wsl2-debian.bash  wsl2-kali.bash  wsl2-ubuntu.bash
srv/dots/: .bashrc
sys/bak/: .bashrc
sys/dots/: .bashrc  .gitconfig
sys/etc/: inputrc
sys/reg/: aliases.enabled  functions.enabled
tests/: __init__.py  conftest.py  test_edge_cases.py  test_install.py  test_integration.py
tests/fixtures/: __init__.py
(+103 files in other folders)
