[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotware"
description = "A python package for managing dotfiles"
dynamic = ["version"]
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
	{ name = "Ragdata", email = "ragdata@ragdata.dev" }
]
keywords = [
	"dotfiles",
	"configuration",
	"management",
	"cli",
	"python"
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
	"Topic :: Software Development :: Libraries",
	"Topic :: Utilities",
	"Typing :: Typed"
]
dependencies = [
	"typer>=0.9.0",
	"docker>=7.0.0"
]

[project.urls]
Repository = "https://github.com/ragdata/dotfiles"
Issues = "https://github.com/ragdata/dotfiles/issues"

[project.optional-dependencies]
"dev" = [
	"pytest>=6.2.4",
]
"docs" = [
	"mkdocs>=1.2.2",
	"mkdocs-material>=8.4.6",
	"mkdocstrings>=0.17.0",
	"pydantic>=1.8.2",
	"mkdocs-minify-plugin>=0.3.0",
	"mkdocs-git-revision-date-localized-plugin>=0.9.1",
	"mkdocs-awesome-pages-plugin>=2.8.0",
	"mkdocs-material-extensions>=1.0.0",
	"mkdocs-material-extensions-typer>=0.1.0",
	"termynal>=0.13.0"
]

[project.scripts]

[tool.setuptools.dynamic]
version = {attr = "dotware.__version__", default = "v0.1.0"}
