[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotware"
description = "A python package for managing dotfiles"
dynamic = ["version"]
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
	{ name = "Ragdata", email = "ragdata@ragdata.dev" }
]
keywords = [
	"dotfiles",
	"configuration",
	"management",
	"cli",
	"python"
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
	"Topic :: Software Development :: Libraries",
	"Topic :: Utilities",
	"Typing :: Typed"
]
dependencies = [
	"typer>=0.9.0",
	"rich>=13.7.1",
	"shellingham>=1.5.4",
	"docker>=7.0.0",
	"github-cli>=1.0.0",
	"dotenv>=0.19.2",
]

[project.urls]
Repository = "https://github.com/ragdata/dotfiles"
Issues = "https://github.com/ragdata/dotfiles/issues"

[project.optional-dependencies]
all = [
	"typer>=0.9.0",
	"rich>=13.7.1",
	"shellingham>=1.5.4",
	"docker>=7.0.0",
	"dotenv>=0.19.2",
	"github-cli>=1.0.0",
	"pytest>=6.2.4",
	"pytest-cov>=6.2.1",
	"pytest-mock>=3.14.1",
	"pytest-xdist>=3.8.0",
	"pytest-timeout>=2.4.0",
	"pytest-benchmark>=5.1.0",
	"pytest-randomly>=3.16.0",
	"flake8>=7.3.0",
	"black>=25.1.0",
	"isort>=6.0.1",
	"mkdocs>=1.2.2",
	"mkdocs-material>=8.4.6",
	"mkdocstrings>=0.17.0",
	"pydantic>=1.8.2",
	"mkdocs-minify-plugin>=0.3.0",
	"mkdocs-git-revision-date-localized-plugin>=0.9.1",
	"mkdocs-awesome-pages-plugin>=2.8.0",
	"mkdocs-material-extensions>=1.0.0",
	"termynal>=0.13.0"
]
dev = [
	"pytest>=6.2.4",
	"pytest-cov>=6.2.1",
	"pytest-mock>=3.14.1",
	"pytest-xdist>=3.8.0",
	"pytest-timeout>=2.4.0",
	"pytest-benchmark>=5.1.0",
	"pytest-randomly>=3.16.0",
	"flake8>=7.3.0",
	"black>=25.1.0",
	"isort>=6.0.1",
]
docs = [
	"mkdocs>=1.2.2",
	"mkdocs-material>=8.4.6",
	"mkdocstrings>=0.17.0",
	"pydantic>=1.8.2",
	"mkdocs-minify-plugin>=0.3.0",
	"mkdocs-git-revision-date-localized-plugin>=0.9.1",
	"mkdocs-awesome-pages-plugin>=2.8.0",
	"mkdocs-material-extensions>=1.0.0",
	"termynal>=0.13.0"
]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]
include = ["dotware.*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "dotware.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-rav -q --tb=short --strict-markers --disable-warnings --color=yes --cov=dotware --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "edge_case: Edge case tests",
    "requires_filesystem: Tests that require filesystem operations"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
